<resources>
    <string name="app_name">Погода в Новосибирске</string>
    <string name="no_data">Нет данных</string>
    <string name="connection_error">Извините, произошла ошибка</string>
    <string name="server_error">Извините, проблемы с сервером</string>
    <string name="item_temperature">%.1f℃</string>
    <string name="item_feels_like">По ощущению %+d</string>
    <string name="item_wind">Ветер %1$d м/с %2$s</string>
    <string name="details_temperature">Температура, ℃</string>
    <string name="details_heat">Ощущается как, ℃</string>
    <string name="details_wind">Ветер, м/с</string>
    <string name="details_pressure">Давление, мм рт. ст.</string>
    <string name="details_relwet">Влажность, %</string>
    <string name="min">минимум: %d</string>
    <string name="max">максимум: %d</string>
    <string name="details_wind_direction">направление: %s</string>

    <string-array name="item_wind_direction">
        <item>С</item>
        <item>СВ</item>
        <item>В</item>
        <item>ЮВ</item>
        <item>Ю</item>
        <item>ЮЗ</item>
        <item>З</item>
        <item>СЗ</item>
    </string-array>
</resources>
