<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools">
    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context="com.mikenik.forecastmoxyapp.forecast_details.ForecastDetailsActivity">
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin">
            <TextView
                    android:id="@+id/date"
                    tools:text="18 декабря 2016 04:00"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/title_margins"
                    android:textAppearance="@style/TextAppearance.AppCompat.Title"/>

            <TextView
                    android:text="@string/details_temperature"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/subheader_margins"
                    android:textAppearance="@style/TextAppearance.AppCompat.Subhead"/>
            <TextView
                    android:id="@+id/temperature_min"
                    tools:text="@string/min"
                    android:layout_marginLeft="@dimen/details_body_text_left_margin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"/>
            <TextView
                    android:id="@+id/temperature_max"
                    tools:text="@string/max"
                    android:layout_marginLeft="@dimen/details_body_text_left_margin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"/>

            <TextView
                    android:text="@string/details_heat"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/subheader_margins"
                    android:textAppearance="@style/TextAppearance.AppCompat.Subhead"/>
            <TextView
                    android:id="@+id/heat_min"
                    tools:text="@string/min"
                    android:layout_marginLeft="@dimen/details_body_text_left_margin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"/>
            <TextView
                    android:id="@+id/heat_max"
                    tools:text="@string/max"
                    android:layout_marginLeft="@dimen/details_body_text_left_margin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"/>

            <TextView
                    android:text="@string/details_wind"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/subheader_margins"
                    android:textAppearance="@style/TextAppearance.AppCompat.Subhead"/>
            <TextView
                    android:id="@+id/wind_min"
                    tools:text="@string/min"
                    android:layout_marginLeft="@dimen/details_body_text_left_margin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"/>
            <TextView
                    android:id="@+id/wind_max"
                    tools:text="@string/max"
                    android:layout_marginLeft="@dimen/details_body_text_left_margin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"/>
            <TextView
                    android:id="@+id/wind_direction"
                    tools:text="@string/details_wind_direction"
                    android:layout_marginLeft="@dimen/details_body_text_left_margin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"/>

            <TextView
                    android:text="@string/details_pressure"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/subheader_margins"
                    android:textAppearance="@style/TextAppearance.AppCompat.Subhead"/>
            <TextView
                    android:id="@+id/pressure_min"
                    tools:text="@string/min"
                    android:layout_marginLeft="@dimen/details_body_text_left_margin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"/>
            <TextView
                    android:id="@+id/pressure_max"
                    tools:text="@string/max"
                    android:layout_marginLeft="@dimen/details_body_text_left_margin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"/>

            <TextView
                    android:text="@string/details_relwet"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/subheader_margins"
                    android:textAppearance="@style/TextAppearance.AppCompat.Subhead"/>
            <TextView
                    android:id="@+id/relwet_min"
                    tools:text="@string/min"
                    android:layout_marginLeft="@dimen/details_body_text_left_margin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"/>
            <TextView
                    android:id="@+id/relwet_max"
                    tools:text="@string/max"
                    android:layout_marginLeft="@dimen/details_body_text_left_margin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"/>
        </LinearLayout>
    </ScrollView>
</layout>